fixed thumbnail links alignment formatting

--- a/public/css/thumbnails/thumbnail_content.css
+++ b/public/css/thumbnails/thumbnail_content.css
@@ -110,10 +110,10 @@
 }
 
 @media (max-width:1200px){
-    .thumbnail-name,
-    .thumbnail-genre,
-    .thumbnail-fans,
-    .thumbnail-links{
+    .thumbnail_expandable_back>.thumbnail-links>.thumbnail-name,
+    .thumbnail_expandable_back>.thumbnail-links>.thumbnail-genre,
+    .thumbnail_expandable_back>.thumbnail-links>.thumbnail-fans,
+    .thumbnail_expandable_back>.thumbnail-links>.thumbnail-links{
         position:static;
         display:block;
         margin:0 auto;
